--- a/source/R5T.D0058.Base/R5T.D0058.Base.csproj
+++ b/source/R5T.D0058.Base/R5T.D0058.Base.csproj
@@ -6,6 +6,7 @@
 
   <ItemGroup>
     <ProjectReference Include="..\..\..\R5T.L0005\source\R5T.L0005.Extensions\R5T.L0005.Extensions.csproj" />
+    <ProjectReference Include="..\..\..\R5T.T0064\source\R5T.T0064\R5T.T0064.csproj" />
     <ProjectReference Include="..\R5T.D0058.Types\R5T.D0058.Types.csproj" />
   </ItemGroup>
 
