--- a/source/R5T.D0058.Default/R5T.D0058.Default.csproj
+++ b/source/R5T.D0058.Default/R5T.D0058.Default.csproj
@@ -7,6 +7,7 @@
   <ItemGroup>
     <ProjectReference Include="..\..\..\R5T.D0057\source\R5T.D0057.Base\R5T.D0057.Base.csproj" />
     <ProjectReference Include="..\..\..\R5T.Dacia.Extensions\source\R5T.Dacia.Extensions\R5T.Dacia.Extensions.csproj" />
+    <ProjectReference Include="..\..\..\R5T.T0064\source\R5T.T0064.T001\R5T.T0064.T001.csproj" />
     <ProjectReference Include="..\R5T.D0058.Base\R5T.D0058.Base.csproj" />
   </ItemGroup>
 </Project>
